--- a/Later/src/main/res/layout/activity_alternate.xml
+++ b/Later/src/main/res/layout/activity_alternate.xml
@@ -19,4 +19,9 @@
         android:paddingBottom="4dp" />
     </android.support.v4.view.ViewPager>
 
+   <!-- <LinearLayout android:id="@+id/undobar" style="@style/UndoBar">
+        <TextView android:id="@+id/undobar_message" style="@style/UndoBarMessage" />
+        <Button android:id="@+id/undobar_button" style="@style/UndoBarButton" />
+    </LinearLayout>-->
+
 </RelativeLayout>
