--- a/Later/src/main/res/menu/compose.xml
+++ b/Later/src/main/res/menu/compose.xml
@@ -10,6 +10,6 @@
     <item android:id="@+id/action_send"
         android:title="Send"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_action_send"
+        android:icon="@drawable/ic_action_send_white"
         android:showAsAction="always" />
 </menu>
